--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Cezary Czubała</span></p>
+                        <br><br>
                         <p><span class="title-s">Speciality: </span> <span>Game and software development</span></p>
                         <p><span class="title-s">Email: </span> <span>czarek.czubala@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(+48) 730 071 704</span></p>
@@ -103,14 +103,28 @@
                   <div class="skill-mf">
                     <h6 class="title-left">Skills</h6>
                     <br>
-                    <p class="lead" style="margin-left: 10px; text-align: center;">
-                      <span class="skill">C++ / C</span><br>
-                      <span class="skill">Unity</span><br>
-                      <span class="skill">C# / .NET</span><br>
-                      <span class="skill">Java</span><br>
-                      <span class="skill">Git</span><br>
-                      <span class="skill">Jira</span><br>
-                    </p>
+                    <div class="row">
+                      <div class="col-md-5">
+                       <p class="lead" style="margin-left: 10px; text-align: left;">
+                          <span class="skill">‣ C++ / C</span><br>
+                          <span class="skill">‣ OpenGL / GLFW</span><br>
+                          <span class="skill">‣ C# / .NET</span><br>
+                          <span class="skill">‣ Unity</span><br>
+                          <span class="skill">‣ Unreal Engine 5</span><br>
+                          <span class="skill">‣ Blender</span><br>
+                        </p>
+                      </div>
+                      <div class="col-md-5">
+                        <p class="lead" style="margin-left: 10px; text-align: left;">
+                           <span class="skill">‣ HTML / CSS / JS</span><br>
+                           <span class="skill">‣ Adobe products</span><br>
+                           <span class="skill">‣ Linux</span><br>
+                           <span class="skill">‣ Git</span><br>
+                           <span class="skill">‣ Jira</span><br>
+                           <span class="skill">‣ RESTful API</span><br>
+                         </p>
+                       </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -134,67 +148,6 @@
         </div>
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services-mf pt-5 route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">
-                Services
-              </h3>
-              <p class="subtitle-a">
-                For any of these just contact me
-              </p>
-              <div class="line-mf"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-book"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Tuition</h2>
-                <p class="s-description text-center">
-                  Maths and/or Computer Science tuition for high school and university students.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-keyboard"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Programming Projects</h2>
-                <p class="s-description text-center">
-                  Problems with development? Need help debugging? Or perhaps you need another person on your dev team.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-chat-dots"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">English conversation practice</h2>
-                <p class="s-description text-center">
-                  Practice your English with a certified C2 speaker.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Services Section -->
-
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
