--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       Hi, I'm Cezary, a CompSci student with a passion for game development, software engineering and algorithmics. I've lived in London for 8 years from 2010 till 2018, so saying I'm comfortable with my English skills would be quite an understatement. During my days in secondary school I developed an interest in game development, which I nurtured by studying the Unity game engine.
                     </p>
                     <p class="lead">
-                      Alongside my Unity journey, I also studied C++ and algorithmics, which I too find myself very comfortable with, having even taught High school students in the past academic year. And although I live and breath computing, I do enjoy playing guitar, drawing and sketching, exercising, listening to some good music and playing games (mostly RPGs and casual action games).
+                      Alongside my Unity journey, I also studied C++ and algorithmics, which I too find myself very comfortable with, having even taught High school students in the past academic year. And although I live and breath computing, I do enjoy playing guitar, drawing and sketching, exercising, listening to some good music and playing games (mostly RPGs and casual action games). I also accept graphic design commisions for a variety of projects.
                     </p>
                   </div>
                 </div>
@@ -334,6 +334,110 @@
               </div>
             </div>
           </div>
+
+        </div>
+      </div>
+    </section><!-- End Portfolio Section -->
+
+
+    <!-- ======= Art portfolio Section ======= -->
+    <section id="work" class="portfolio-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Graphic design projects
+              </h3>
+              <p class="subtitle-a">
+                Posters and other pieces of graphic design I've created on the side, some for clients and some for myself.
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/zewpiwa1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/zewpiwa1.png" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Zew Piwa - I edition</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/zewpiwa2.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/zewpiwa2.png" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Zew Piwa - II edition</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/zewpiwa3.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/zewpiwa3.png" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Zew Piwa - III edition</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/zaba.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/zaba.png" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">A random frog digital painting</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/zosia.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/zosia.png" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">My ZOSIA poster submission</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
       </div>
