Fix for phone resolutions

--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -75,11 +75,12 @@
                 <div class="row" style="text-align: center;">
                 <!-- <h6 class="title-left">Informacje</h6> -->
                 <span class="title-s" style="padding-top: 0px;">Przyjęcie odbędzie się</span>
-                <span class="title-s" style="font-size:4rem; padding-top: 30px;">23 lipca 2023</span>
+                <span class="title-s" style="font-size:2.2rem; padding-top: 30px;">23 lipca 2023</span>
                 <span class="title-s" style="padding-top: 20px;">o godzinie 13:00 w</span>
-                <span class="title-s" style="font-size:4rem; padding-top: 30px;">Londynie</span>
+                <span class="title-s" style="font-size:2.2rem; padding-top: 30px;">Londynie</span>
                 <span class="title-s" style="padding-top: 50px;">Proszę o potwierdzenie przybycia do 7 lipca</span>
-                <span class="title-s" style="padding-top: 10px;">pod numerem tel.: 123 456 789</span>
+                <span class="title-s" style="padding-top: 10px;">pod numerem tel.:</span>
+                <span class="title-s" style="padding-top: 10px;">730 071 704</span>
                 <span class="title-s" style="padding-top: 10px;">lub na messengerze.</span>
 
                 <br />
