more info below text

--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -63,7 +63,7 @@
         <h1 class="hero-title mb-4">Elżbietę Pilarz</h1>
         <p class="hero-subtitle"><span>na przyjęcie z okazji moich osiemnastych urodzin</span></p>
         
-        <p class="hero-subtitle"><span></span></p>
+        <p class="hero-subtitle" style="font-size: 1.3rem;"><span>Więcej informacji poniżej</span></p>
       </div>
   </section>
 
