--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -51,7 +51,7 @@
     <div class="video-wrap">
       <div id="video">
         <video id="bgvid" autoplay loop muted playsinline>
-          <source src="../assets/img/zaproszeniewtle.mov" type="video/mp4">
+          <source src="../assets/img/zaproBG2.mov" type="video/mp4">
         </video>
         
       </div>
@@ -69,11 +69,10 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about-mf sect-pt4 route">
-        <div class="row" style="width: 100%; height: 900px;">
+        <!-- <div class="row" style="width: 100%; height: 900px;">
             <div class="col-sm-12" style="width: 100%; height: 850px;">
             <div class="box-shadow-full" style="width: 100%; height: 850px;">
                 <div class="row" style="text-align: center;">
-                <!-- <h6 class="title-left">Informacje</h6> -->
                 <span class="title-s" style="padding-top: 0px;">Przyjęcie odbędzie się</span>
                 <span class="title-s" style="font-size:2.2rem; padding-top: 30px;">23 lipca 2023</span>
                 <span class="title-s" style="padding-top: 20px;">o godzinie 13:00 w</span>
@@ -91,8 +90,10 @@
                 </div>
             </div>
             </div>
-        </div>
-    </section><!-- End About Section -->
+        </div> -->
+
+        <img src="../assets/img/zaproBG_finalArt.png"> </img>
+     </section><!-- End About Section -->
 
 
   <div id="preloader"></div>
