change bg scale

--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -46,8 +46,8 @@
 
    <!-- ======= Hero Section ======= -->
    
-  <section>
-  <div id="hero" class="video-background">
+  <section style="height: 1000px;">
+  <!-- <div id="hero" class="video-background">
     <div class="video-wrap">
       <div id="video">
         <video id="bgvid" autoplay loop muted playsinline>
@@ -56,15 +56,18 @@
         
       </div>
     </div>
-  </div>
+  </div> -->
 
-    <div class="hero text-center">
+    <img src="../assets/img/particleBG.png" height="1080px" style="z-index: -1; position: absolute; object-fit: cover"> 
+      <div class="hero text-center">
         <p class="hero-subtitle"><span>Z wielką przyjemnością zapraszam</span></p>
         <h1 class="hero-title mb-4">Elżbietę Pilarz</h1>
         <p class="hero-subtitle"><span>na przyjęcie z okazji moich osiemnastych urodzin</span></p>
         
         <p class="hero-subtitle" style="font-size: 1.3rem;"><span>Więcej informacji poniżej</span></p>
       </div>
+    </img>
+
   </section>
 
     <!-- ======= About Section ======= -->
