--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -46,7 +46,7 @@
 
    <!-- ======= Hero Section ======= -->
    
-  <section style="height: 1000px;">
+  <section style="height: 100vh;">
   <!-- <div id="hero" class="video-background">
     <div class="video-wrap">
       <div id="video">
@@ -58,7 +58,7 @@
     </div>
   </div> -->
 
-    <img src="../assets/img/particleBG.png" height="1080px" style="z-index: -1; position: absolute; object-fit: cover"> 
+    <img src="../assets/img/particleBG.png" height="100%" style="z-index: -1; position: absolute; object-fit: cover"> 
       <div class="hero text-center">
         <p class="hero-subtitle"><span>Z wielką przyjemnością zapraszam</span></p>
         <h1 class="hero-title mb-4">Elżbietę Pilarz</h1>
@@ -71,7 +71,7 @@
   </section>
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about-mf sect-pt4 route">
+    <section id="about" class="about-mf sect-pt4 route" style="height: 100vh;">
         <!-- <div class="row" style="width: 100%; height: 900px;">
             <div class="col-sm-12" style="width: 100%; height: 850px;">
             <div class="box-shadow-full" style="width: 100%; height: 850px;">
