--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -70,23 +70,22 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about-mf sect-pt4 route" style="height: 100vh; background: linear-gradient(to bottom, pink, rgb(206, 105, 124));;">
-        <div class="row" style="width: 100%; height: 900px;">
-            <div class="col-sm-12" style="width: 100%; height: 850px;">
-            <div class="box-shadow-full" style="width: 100%; height: 850px;">
+        <div class="row" style="width: 100%; margin-top: 0%;">
+            <div class="col-sm-12" style="width: 100%; margin-top: 0%;">
+            <div class="box-shadow-full" style="width: 100%; margin-top: 0%; padding-top: 0;">
                 <div class="row" style="text-align: center;">
-                <span class="title-s" style="padding-top: 0px;">Przyjęcie odbędzie się</span>
+                <span class="title-s">Przyjęcie odbędzie się</span>
                 <span class="title-s" style="font-size:2.2rem; padding-top: 30px;">23 lipca 2023</span>
                 <span class="title-s" style="padding-top: 20px;">o godzinie 18:00 w</span>
                 <span class="title-s" style="font-size:2.2rem; padding-top: 35px;">Restauracji Poker</span>
                 <span class="title-s" style="font-size:2.2rem; padding-top: 10px;">ul. Żyzna 11c <br>
                   42-200 Częstochowa</span>
                 <div style="height: 5px; width: 100%; background-color: rgb(104, 37, 37); margin-top: 40px;"></div>
-                <span class="title-s" style="padding-top: 50px;">Proszę o potwierdzenie przybycia do <br> 7 lipca</span>
+                <span class="title-s" style="padding-top: 40px;">Proszę o potwierdzenie przybycia do <br> 7 lipca</span>
                 <span class="title-s" style="padding-top: 10px;">pod numerem tel.:</span>
                 <span class="title-s" style="padding-top: 10px;">123 456 789</span>
                 <span class="title-s" style="padding-top: 10px;">lub na messengerze.</span>
 
-                <br />
                 <br />
 
                 <span class="title-s" style="padding-top: 10px; font-size: 2.2rem;">~ Julia Czubała</span>
