--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -74,13 +74,16 @@
             <div class="col-sm-12" style="width: 100%; margin-top: 0%;">
             <div class="box-shadow-full" style="width: 100%; margin-top: 0%; padding-top: 0;">
                 <div class="row" style="text-align: center;">
-                <span class="title-s">Przyjęcie odbędzie się</span>
+                <span class="title-s" style="color: rgb(28, 28, 28);">Przyjęcie odbędzie się</span>
                 <span class="title-s" style="font-size:2.2rem; padding-top: 15px;">23 lipca 2023</span>
                 <span class="title-s">o godzinie 18:00 w</span>
                 <span class="title-s" style="font-size:2.2rem; padding-top: 10px;">Restauracji Poker</span>
                 <span class="title-s" style="font-size:1.8rem;">ul. Żyzna 11c <br>
                   42-200 Częstochowa</span>
-                <div style="height: 5px; width: 100%; background-color: rgb(104, 37, 37); margin-top: 30px;"></div>
+                <div>
+                  <img src="../assets/img/glitter.png" style="margin-top: -60px; z-index: -1; rotate: 20deg;" > </img>
+                </div>
+                <div style="height: 5px; width: 100%; background-color: rgba(104, 37, 37, 0); margin-top: 30px;"></div>
                 <span class="title-s" style="padding-top: 30px;">Proszę o potwierdzenie przybycia do 7 lipca</span>
                 <span class="title-s" style="padding-top: 7px;">pod numerem tel.:</span>
                 <span class="title-s" style="padding-top: 3px;">123 456 789</span>
