--- a/zaproszenia/zaproszenie-babcia.html
+++ b/zaproszenia/zaproszenie-babcia.html
@@ -61,6 +61,7 @@
     <img src="../assets/img/bg_raw.png" style="height: 100%; margin-top: 0; z-index: -1;">
       <div class="hero text-center">
         <p class="hero-subtitle"><span>Z wielką przyjemnością zapraszam</span></p>
+
         <h1 class="hero-title mb-4">Elżbietę Pilarz</h1>
         <p class="hero-subtitle"><span>na przyjęcie z okazji moich osiemnastych urodzin</span></p>
         
@@ -111,6 +112,8 @@
                     <span class="title-s" style="font-size:2rem; padding-top: 5px;">w restauracji</span>
                     <span class="title-s" style="color:rgb(248, 178, 189); font-size: 2.6rem; padding-top: 15px;">"Poker"</span>
                     <span class="title-s" style="font-size:1.7rem;">ul. Żyzna 11c Częstochowa</span>
+
+                    <span class="title-s" style="padding-top: 12px; font-size: 1.5rem;">Respectfully, we ask you to leave the colour <span style="color: pink;"> pink </span> for the birthday girl ;)</span>
                     
                     </div>
                 </div>
