--- a/zaproszenia/zaproszenie-skuza.html
+++ b/zaproszenia/zaproszenie-skuza.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cezary C.</title>
+  <title>Zaproszenie</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -62,7 +62,10 @@
       <div class="hero text-center">
         <p class="hero-subtitle"><span>Z wielką przyjemnością zapraszam</span></p>
 
-        <h1 class="hero-title mb-4">Elżbietę Pilarz</h1>
+        <h1 class="hero-title mb-4">Ilonę Skuzę<br>
+Tomasza Skuzę<br>
+Kacpra Skuzę<br>
+Michelle Skuzę</h1>
         <p class="hero-subtitle"><span>na przyjęcie z okazji moich osiemnastych urodzin</span></p>
         
         <p class="hero-subtitle" style="font-size: 1.3rem;"><span>Więcej informacji poniżej</span></p>
