--- a/zaproszenia/zaproszenie-maskara.html
+++ b/zaproszenia/zaproszenie-maskara.html
@@ -62,9 +62,9 @@
       <div class="hero text-center">
         <p class="hero-subtitle"><span>Z wielką przyjemnością zapraszam</span></p>
 
-        <h1 class="hero-title mb-4">Agnieszkę Maskarę<br>
-Rastislava Maskarę<br>
-Maksyma Maskarę </h1>
+        <h1 class="hero-title mb-4">Agnieszkę Maskara<br>
+Rastislava Maskara<br>
+Maksyma Maskara </h1>
         <p class="hero-subtitle"><span>na przyjęcie z okazji moich osiemnastych urodzin</span></p>
         
         <p class="hero-subtitle" style="font-size: 1.3rem;"><span>Więcej informacji poniżej</span></p>
