--- a/zaproszenia/zaproszenie-maskara2.html
+++ b/zaproszenia/zaproszenie-maskara2.html
@@ -62,7 +62,7 @@
       <div class="hero text-center">
         <p class="hero-subtitle"><span>Z wielką przyjemnością zapraszam</span></p>
 
-        <h1 class="hero-title mb-4">Filipa Maskara<br>
+        <h1 class="hero-title mb-4">Filipa Maskarę<br>
 z osobą towarzyszącą</h1>
         <p class="hero-subtitle"><span>na przyjęcie z okazji moich osiemnastych urodzin</span></p>
         
