alignment and size

--- a/zaproszenia/zaproszenie-balz.html
+++ b/zaproszenia/zaproszenie-balz.html
@@ -105,9 +105,9 @@ Gianetto Balzani</h1>
         <img src="../assets/img/bg_raw.png" style="height: 100%; margin-top: 0; z-index: -1;">
           <div class="row" style="width: 100%; margin-top: 0%;">
               <div class="col-sm-12" style="width: 100%; margin-top: 0%;">
-                <div class="box-shadow-full" style="width: 100%; margin-top: 0%; padding-top: 0;">
-                    <div class="row" style="text-align: center;">
-                    <span class="title-s" style="padding-top: 170px;">Przyjęcie odbędzie się</span>
+                <div class="box-shadow-full" style="width: 100%; margin-top: 40%; padding-top: 0;">
+                  <div class="row" style="text-align: center;">
+                    <span class="title-s">Przyjęcie odbędzie się</span>
                     <span class="title-s" style="font-size:2.2rem; padding-top: 15px;">23 lipca 2023</span>
                     <span class="title-s" style="padding-top: 8px;">o godzinie 18:00</span>
                     <span class="title-s" style="font-size:2rem; padding-top: 5px;">w restauracji</span>
