--- a/index.html
+++ b/index.html
@@ -437,6 +437,38 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/mistrzostwaWallpaper.jfif" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/mistrzostwaWallpaper.jfif" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">A wallpaper for the "Mistrzostwa Polski Szkół Średnich w Programowaniu Zespołowym"</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/art/mistrzostwaPoster.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/art/mistrzostwaPoster.png" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">A poster for the "Mistrzostwa Polski Szkół Średnich w Programowaniu Zespołowym"</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
         </div>
