--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <div class="hero text-center">
     <h1 class="hero-title mb-4">I am Cezary Czubała</h1>
-    <p class="hero-subtitle"><span class="typed" data-typed-items="Game developer, Software engineer, Algorithmics teacher"></span></p>
+    <p class="hero-subtitle"><span class="typed" data-typed-items="Game developer, Software engineer, Algorithmics teacher, Graphic designer"></span></p>
   </div>
 
 
