Add Dolby experience

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                       <img src="assets/img/Norwid.jpg" alt="" class="rounded-circle b-shadow-a">
                       <span class="author">High school nr. 9 in Częstochowa</span>
                       <span class="author">Competitive programming teacher</span>
-                      <span class="author" style="font-size: 1rem;">(10/2021 - 07/2022)</span>
+                      <span class="author" style="font-size: 1rem;">(Since 10/2021)</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
@@ -532,6 +532,24 @@
                     </div>
                   </div>
                 </div><!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
+                      <img src="assets/img/Dolby.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Dolby</span>
+                      <span class="author">C++ Developer Intern</span>
+                      <span class="author" style="font-size: 1rem;">(Since 06/2023)</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        As a C++ developer intern I've gained much experience in a much more standarised way of work with C++ and tools related (CMake, Conan...). I've also developed my knowledge of sound engineering and signal processing, as well as general project maintanenace. My main task was migrating projects from Perforce over to Gitlab.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End testimonial item -->
+
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
