--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a class="nav-link scrollto " href="#work">Projects</a></li>
+          <li><a class="nav-link scrollto " href="#experience-logs">Experience</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -85,19 +86,9 @@
             <div class="box-shadow-full">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="row">
-                    <div class="col-sm-6 col-md-5">
-                      <div class="about-img">
-                        <img src="assets/img/CVPhoto2.jpg" class="img-fluid rounded b-shadow-a" alt="">
-                      </div>
-                    </div>
-                    <div class="col-sm-6 col-md-7">
-                      <div class="about-info">
-                        <br><br>
-                        <p><span class="title-s">Speciality: </span> <span>Game and software development</span></p>
-                        <p><span class="title-s">Email: </span> <span>czarek.czubala@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(+48) 730 071 704</span></p>
-                      </div>
+                  <div class="row" style="text-align: center;">
+                    <div class="about-img">
+                      <img src="assets/img/CVPhoto2.jpg" class="img-fluid rounded b-shadow-a" style="max-width: 50%;" alt="">
                     </div>
                   </div>
                   <div class="skill-mf">
@@ -109,19 +100,19 @@
                           <span class="skill">‣ C++ / C</span><br>
                           <span class="skill">‣ OpenGL / GLFW</span><br>
                           <span class="skill">‣ C# / .NET</span><br>
-                          <span class="skill">‣ Unity</span><br>
-                          <span class="skill">‣ Unreal Engine 5</span><br>
+                          <span class="skill">‣ Unity / UE5</span><br>
                           <span class="skill">‣ Blender</span><br>
+                          <span class="skill">‣ Git(lab|hub) CIs</span><br>
                         </p>
                       </div>
                       <div class="col-md-5">
                         <p class="lead" style="margin-left: 10px; text-align: left;">
-                           <span class="skill">‣ HTML / CSS / JS</span><br>
-                           <span class="skill">‣ Adobe products</span><br>
-                           <span class="skill">‣ Linux</span><br>
-                           <span class="skill">‣ Git</span><br>
-                           <span class="skill">‣ Jira</span><br>
-                           <span class="skill">‣ RESTful API</span><br>
+                           <span class="skill">‣ CMake / Conan</span><br>
+                           <span class="skill">‣ Able to quit VIM</span><br>
+                           <span class="skill">‣ Windows / Linux</span><br>
+                           <span class="skill">‣ Git / Perforce</span><br>
+                           <span class="skill">‣ Jira / Confluence</span><br>
+                           <span class="skill">‣ Advanced algos</span><br>
                          </p>
                        </div>
                     </div>
@@ -135,10 +126,10 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hi, I'm Cezary, a CompSci student with a passion for game development, software engineering and algorithmics. I've lived in London for 8 years from 2010 till 2018, so saying I'm comfortable with my English skills would be quite an understatement. During my days in secondary school I developed an interest in game development, which I nurtured by studying the Unity game engine.
+                      Hi, I'm Cezary, a CompSci student with a passion for game development, software engineering and algorithmics. During my days in secondary school I developed an interest in game development, which I nurtured by studying the Unity game engine. Since then my knowledge of computer systems and programs has developed quite a bit. My most recent focuses are: advanced computer graphics (physics-based renderers), a passion project for the Vaultears team and working on my bachelor of engineering diploma.
                     </p>
                     <p class="lead">
-                      Alongside my Unity journey, I also studied C++ and algorithmics, which I too find myself very comfortable with, having even taught High school students in the past academic year. And although I live and breath computing, I do enjoy playing guitar, drawing and sketching, exercising, listening to some good music and playing games (mostly RPGs and casual action games). I also accept graphic design commisions for a variety of projects.
+                      Alongside my Unity journey, I also studied C++ and algorithmics, which I too find myself very comfortable with, proven by the fact I've been teaching olimpiad-level topics at my old high school throughout my academic years. And although I live and breath computing, I do enjoy playing guitar, drawing and sketching, exercising, listening to some good music and playing games (mostly RPGs, RTSs and casual action games). I also accept graphic design commisions for a variety of projects.
                     </p>
                   </div>
                 </div>
@@ -476,7 +467,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/codeBG.jpg)">
+    <div id="experience-logs" class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/codeBG.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -484,6 +475,58 @@
 
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+
+
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
+                      <img src="assets/img/Dolby.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Dolby</span>
+                      <span class="author">C++ Developer Intern</span>
+                      <span class="author" style="font-size: 1rem;">(Since 06/2023)</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        As a C++ developer intern I've gained much experience in a much more standarised way of work with C++ and tools related (CMake, Conan...). I've also developed my knowledge of sound engineering and signal processing, as well as general project maintanenace. My main task was migrating projects from Perforce over to Gitlab.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End testimonial item -->
+
+
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
+                      <img src="assets/img/Norwid.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">High school nr. 9 in Częstochowa</span>
+                      <span class="author">Competitive programming teacher</span>
+                      <span class="author" style="font-size: 1rem;">(Since 10/2021)</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        Along with a friend we lead Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End testimonial item -->
+
+
+
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
+                      <img src="assets/img/vaultearsSmall.png" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Vaultears</span>
+                      <span class="author">Team lead</span>
+                      <span class="author" style="font-size: 1rem;">(Since 02/2021)</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        Vaultears formed around covid time with a few of my other friends when we started creating games for game jams. As the most experienced, I am the team lead and lead programmer, and as of now we have two game jam games in our portfolio as well as one bigger project in the works.
+                      </p>
+                    </div>
+                  </div>
+                </div><!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-box">
@@ -517,37 +560,6 @@
                   </div>
                 </div><!-- End testimonial item -->
 
-               <div class="swiper-slide">
-                  <div class="testimonial-box">
-                    <div class="author-test">
-                      <img src="assets/img/Norwid.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">High school nr. 9 in Częstochowa</span>
-                      <span class="author">Competitive programming teacher</span>
-                      <span class="author" style="font-size: 1rem;">(Since 10/2021)</span>
-                    </div>
-                    <div class="content-test">
-                      <p class="description lead">
-                        Along with a friend we led Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
-                      </p>
-                    </div>
-                  </div>
-                </div><!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-box">
-                    <div class="author-test">
-                      <img src="assets/img/Dolby.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Dolby</span>
-                      <span class="author">C++ Developer Intern</span>
-                      <span class="author" style="font-size: 1rem;">(Since 06/2023)</span>
-                    </div>
-                    <div class="content-test">
-                      <p class="description lead">
-                        As a C++ developer intern I've gained much experience in a much more standarised way of work with C++ and tools related (CMake, Conan...). I've also developed my knowledge of sound engineering and signal processing, as well as general project maintanenace. My main task was migrating projects from Perforce over to Gitlab.
-                      </p>
-                    </div>
-                  </div>
-                </div><!-- End testimonial item -->
 
 
               </div>
