Add thesis and logos

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a class="nav-link scrollto " href="#work">Projects</a></li>
           <li><a class="nav-link scrollto " href="#experience-logs">Experience</a></li>
+          <li><a class="nav-link scrollto " href="inzynierka.pdf">BEng Thesis</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
